...


            // Input and Send button
            TextField(
                value = userInput,
                onValueChange = { userInput = it },
                label = { Text("Mensaje al Asistente Inteligente") },
                // Configura colores...
                modifier = Modifier.fillMaxWidth()
                    .testTag("UserInputField")
            )

            Button(
...
                    }
                },
                colors = ButtonDefaults.buttonColors(containerColor = TecBlue),
                modifier = Modifier.fillMaxWidth()
                    .testTag("SendButton")
            ) {
                Text(text = "Send")
            }

        }
    }
}

